# Logbook

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TESTPROTOKOLL-v1.1.0.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml  test.yml
public/: demo-backup.json
server/: config.example.json  nmea-bridge.ts  nmea-parser.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  BeaufortPicker.tsx  Button.tsx  Card.tsx  CoordinateInput.tsx  CountrySelect.tsx  EmojiSelect.tsx  FileUpload.tsx  Input.tsx  Modal.tsx  NMEADebugPanel.tsx  NMEAImportPanel.tsx  OktasPicker.tsx  SailDiagram.tsx  Select.tsx
src/contexts/: NMEAContext.tsx
src/db/: database.ts  models.ts
src/hooks/: useCrew.ts  useLogEntries.ts  useNMEA.ts  useSettings.ts  useShip.ts
src/i18n/: de.ts  en.ts  index.ts
src/pages/: CrewManagement.tsx  Dashboard.tsx  Emergency.tsx  Export.tsx  LogEntryForm.tsx  Logbook.tsx  Maintenance.tsx  MapView.tsx  PortLog.tsx  Safety.tsx  Search.tsx  Settings.tsx  ShipData.tsx  Storage.tsx  Summary.tsx  VHFReference.tsx
src/utils/: backupDir.ts  flagUrl.ts  geo.test.ts  geo.ts  pdf.ts  units.test.ts  units.ts
