[package]
name = "logbuch"
version = "1.0.0"
description = "Digitales Segellogbuch"
authors = ["flowmbl"]
edition = "2021"

# Suppress console window on Windows in release builds
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lib]
name = "logbuch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
